Fix dark mode text fallback
https://github.com/lindylearn/unclutter/issues/648

--- a/apps/unclutter/source/data/siteTweaksDark.css
+++ b/apps/unclutter/source/data/siteTweaksDark.css
@@ -10,6 +10,6 @@ img {
 
 /* https://www.vladionescu.me/posts/scaling-containers-on-aws-in-2022/ */
 * {
-    color: unset !important;
+    /* color: unset !important; https://9fans.github.io/plan9port/man/man1/rc.html */
     background-color: unset !important;
 }
